1. 新增sp demo 2. 修正自设比备份时列表为空的问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1482,4 +1482,8 @@
     <string name="str_cmd_sub_del">{\"did\": \"xxx\"}</string>
     <string name="str_cmd_sub_fw_upgrade">{\"did\": \"xxx\", \"hw_url\": \"xxx\"}</string>
     <string name="str_cmd_sub_mdf">{\"did\": \"xxx\", \"pid\": \"xxx\", \"name\": \"xxx\", \"lock\": false, \"type\":10024}</string>
+    
+    <string name="str_json_test">{\"countryCode\":\"ASM\"}</string>
+    
+    
 </resources>
